<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My App Stories</string>
    <string name="SplashScreen1">Icon SplashScreen 1</string>
    <string name="SplashScreen2">Icon SplashScreen 2</string>
    <string name="story">STORIES</string>
    <string name="description">displays a list of stories from friends who are studying and graduating from Dicoding</string>
    <string name="addStory">Add Your Story</string>
    <string name="description2">add and upload your interesting stories while learning at Dicoding</string>
    <string name="title_login">are you ready to share your story?</string>
    <string name="message_login">Please confirm your email and enter your password</string>
    <string name="required_field_name">Field name must be filled</string>
    <string name="required_field_email">Field email must be filled</string>
    <string name="required_field_password">Field password must be filled</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="register">Register</string>
    <string name="message_register">Don\'t have already an account?</string>
    <string name="title_welcome_page">Welcome to My App Story</string>
    <string name="title_register">Complete your data below</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your name</string>
    <string name="user_name">Nama User</string>
    <string name="fab_add">Add Story</string>
    <string name="detail_story">Detail Story</string>

    <string name="invalidEmail">Invalid Email</string>
    <string name="error_name">Name cannot be empty</string>
    <string name="error_password">Password must be at least 8 characters long</string>
    <string name="retry">Try Again</string>
    <string name="desc">Deskripsi</string>
    <string name="image_detail">Detail Image</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_image">Add Image</string>
    <string name="input_image">Upload the image file first</string>
    <string name="language">Language</string>
    <string name="add_story">Add Story</string>
    <string name="list_story">People\'s Stories</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">location</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="allow_permission">PLease Allow this Camera\n</string>
    <string name="alert_title_login">Welcome to the Stories App!</string>
    <string name="alert_message_login">Come on, share your story!</string>
    <string name="alert_button_login">Let\'s start!</string>
    <string name="alert_title_register">Congratulations!</string>
    <string name="alert_message_register">Your account has been successfully created. Please log in to get started!</string>
    <string name="alert_button_register">OK, Login</string>

</resources>